# image-orientation-sorter

./: Cargo.toml  README.md
assets/images/: image_credits.md
src/: lib.rs  main.rs
