# Refs:
# - https://doc.rust-lang.org/cargo/reference/manifest.html
# - https://doc.rust-lang.org/cargo/guide/project-layout.html
# - https://doc.rust-lang.org/cargo/reference/cargo-targets.html

[package]
name = "imgorisort"
version = "0.1.0"
authors = ["🎷🐛 Lee Ball <lee.cat.ball@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/catleeball/image-orientation-sorter"
repository = "https://github.com/catleeball/image-orientation-sorter"
description = "Sort images in a directory by orientation: landscape, portrait, or square."

[dependencies]
aho-corasick = "^0.7.13"
image = { version = "^0.23.6", features = ["gif", "jpeg", "ico", "png", "tiff", "webp", "bmp", "jpeg_rayon"] }
failure = "^0.1.8"
structopt = "^0.3.12"
walkdir = "^2.3.1"
log = "^0.4.8"
stderrlog = "^0.4.3"
rayon = "^1.3.1"