# Refs:
# - https://doc.rust-lang.org/cargo/reference/manifest.html
# - https://doc.rust-lang.org/cargo/guide/project-layout.html
# - https://doc.rust-lang.org/cargo/reference/cargo-targets.html

[package]
name = "imgorisort"
version = "0.2.2"
authors = ["🎷🐛 Lee Ball <lee.cat.ball@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/catleeball/image-orientation-sorter"
repository = "https://github.com/catleeball/image-orientation-sorter"
description = "Quickly sort images into directories by orientation: tall, wide, and square."

[dependencies]
aho-corasick = "^0.7.13"
arraystring = "0.3.0"
clap = "^2.33.1"
image = { version = "^0.23.6", features = ["gif", "jpeg", "ico", "png", "tiff", "webp", "bmp", "jpeg_rayon"] }
log = "^0.4.8"
stderrlog = "^0.4.3"
structopt = "^0.3.12"
walkdir = "^2.3.1"

[profile.release]
opt-level = 3
codegen-units = 1
